[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["mmajramillo <101571855+mmajramillo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
